# LearnOpenGL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_xcode.sh  main.cpp  makefile
assets/shaders/: asteroid.vert  light.frag
cmake/: CmakeProjectSettings.cmake  CompilerWarnings.cmake  Doxygen.cmake
dependencies/assimp/: revision.h
dependencies/glad/: CMakeLists.txt
dependencies/glfw/: cmake_uninstall.cmake
src/: CMakeLists.txt  asteroid.cpp  asteroid.h  camera.cpp  camera.h  cubeSquared.cpp  cubeSquared.h  cube_demo.cpp  cube_demo.h  cube_layout.cpp  cube_layout.h  debug_ui.cpp  debug_ui.h  glad.c  grass.cpp  grass.h  img_demo.cpp  img_demo.h  main.cpp  main.h  mesh.cpp  mesh.h  mirror.cpp  model.cpp  model.h  r_cube.cpp  r_cube.h  shader.cpp  shader.h  sky_box.cpp  sky_box.h  texture_loader.cpp  texture_loader.h
src/entities/: entitiy.cpp  entitiy.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.h  world_light.cpp  world_light.h
src/include/glad/: glad.h
src/shaders/: direct.frag  exploade.geom  light.frag  light_.frag  light_cube.frag  lightshader.frag  point.frag  reflection.frag  reflection.vert  shader.frag  shader.vert
